--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "@types/react-redux": "^7.1.23",
     "@types/uuid": "^8.3.4"
   },
-  "homepage": "https://master--restaurant-reviewr.netlify.app/"
+  "homepage": "https://restaurant-reviewr.netlify.app/"
 }
